<resources>
    <string name="app_name">My Application</string>
    <string name="first_name">Imię:</string>
    <string name="first_name_hint">Wpisz imię</string>
    <string name="last_name">Nazwisko:</string>
    <string name="last_name_hint">Wpisz nazwisko:</string>
    <string name="grades_count">Liczba ocen:</string>
    <string name="grades_count_hint">Wpisz liczbę ocen (5–15)</string>
    <string name="gradesButton">Oceny</string>
    <string name="firstNameEmpty">Imię nie może być puste</string>
    <string name="lastNameEmpty">Nazwisko nie może być puste</string>
    <string name="gradesCountEmpty">Liczba ocen nie może być pusta</string>
    <string name="gradesCountRange">Liczba ocen musi być z przedziału [5,15]</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="oblicz_redni">Oblicz Średnią</string>
    <string name="gj">Zdałeś</string>
    <string name="nope">Nie zdałeś</string>
    <string name="congratulation">Gratulacje otrzymujesz zaliczenie!</string>
    <string name="condition">Wysyłam podanie o zaliczenie warunkowe</string>
    <string-array name="subjects">
        <item>Język angielski - zawodowy informatyczny</item>
        <item>Podstawy sztusznej inteligencji w języku Python</item>
        <item>Programowanie w języku SWIFT</item>
        <item>Programowanie aplikacji internetowych</item>
        <item>Sieci rozproszone</item>
        <item>Systemy wbudowane</item>
        <item>Zaawansowane programowanie obiektowe (C++)</item>
        <item>Zaawansowana inżynieria oprogramowania</item>
        <item>Bezpieczeństwo informacji</item>
        <item>Język angielski II</item>
        <item>Podstawy aplikacji internetowych</item>
        <item>Podstawy grafiki komputerowej</item>
        <item>Podstawy inżynierii oprogramowania</item>
        <item>Podstawy paradygmatów programowania</item>
        <item>Podstawy techniki cyfrowej</item>
    </string-array>

</resources>